Implementación de Swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 logging.level.org.hibernate.SQL=debug
 
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+
